--- a/examples/remote/cargo_workspace/remote/autocfg-0.1.7.BUILD.bazel
+++ b/examples/remote/cargo_workspace/remote/autocfg-0.1.7.BUILD.bazel
@@ -12,7 +12,7 @@ package(default_visibility = [
 ])
 
 licenses([
-  "notice", # MIT from expression "MIT OR Apache-2.0"
+  "notice", # Apache-2.0 from expression "Apache-2.0 OR MIT"
 ])
 
 load(
@@ -23,11 +23,9 @@ load(
 )
 
 
-# Unsupported target "build-script-build" with type "custom-build" omitted
-# Unsupported target "const_fn" with type "test" omitted
 
 rust_library(
-    name = "libc",
+    name = "autocfg",
     crate_type = "lib",
     deps = [
     ],
@@ -37,11 +35,14 @@ rust_library(
     rustc_flags = [
         "--cap-lints=allow",
     ],
-    version = "0.2.74",
+    version = "0.1.7",
     tags = ["cargo-raze"],
     crate_features = [
-        "default",
-        "std",
     ],
 )
 
+# Unsupported target "integers" with type "example" omitted
+# Unsupported target "paths" with type "example" omitted
+# Unsupported target "rustflags" with type "test" omitted
+# Unsupported target "traits" with type "example" omitted
+# Unsupported target "versions" with type "example" omitted
