--- a/examples/remote/cargo_workspace/remote/bitflags-1.2.1.BUILD.bazel
+++ b/examples/remote/cargo_workspace/remote/bitflags-1.2.1.BUILD.bazel
@@ -23,11 +23,9 @@ load(
 )
 
 
-# Unsupported target "build-script-build" with type "custom-build" omitted
-# Unsupported target "const_fn" with type "test" omitted
 
 rust_library(
-    name = "libc",
+    name = "bitflags",
     crate_type = "lib",
     deps = [
     ],
@@ -37,11 +35,11 @@ rust_library(
     rustc_flags = [
         "--cap-lints=allow",
     ],
-    version = "0.2.74",
+    version = "1.2.1",
     tags = ["cargo-raze"],
     crate_features = [
         "default",
-        "std",
     ],
 )
 
+# Unsupported target "build-script-build" with type "custom-build" omitted
