--- a/examples/remote/cargo_workspace/remote/rand_isaac-0.1.1.BUILD.bazel
+++ b/examples/remote/cargo_workspace/remote/rand_isaac-0.1.1.BUILD.bazel
@@ -23,13 +23,12 @@ load(
 )
 
 
-# Unsupported target "build-script-build" with type "custom-build" omitted
-# Unsupported target "const_fn" with type "test" omitted
 
 rust_library(
-    name = "libc",
+    name = "rand_isaac",
     crate_type = "lib",
     deps = [
+        "@cargo_workspace__rand_core__0_3_1//:rand_core",
     ],
     srcs = glob(["**/*.rs"]),
     crate_root = "src/lib.rs",
@@ -37,11 +36,9 @@ rust_library(
     rustc_flags = [
         "--cap-lints=allow",
     ],
-    version = "0.2.74",
+    version = "0.1.1",
     tags = ["cargo-raze"],
     crate_features = [
-        "default",
-        "std",
     ],
 )
 
