--- a/examples/remote/cargo_workspace/remote/rdrand-0.4.0.BUILD.bazel
+++ b/examples/remote/cargo_workspace/remote/rdrand-0.4.0.BUILD.bazel
@@ -12,7 +12,7 @@ package(default_visibility = [
 ])
 
 licenses([
-  "notice", # MIT from expression "MIT OR Apache-2.0"
+  "notice", # ISC from expression "ISC"
 ])
 
 load(
@@ -23,13 +23,13 @@ load(
 )
 
 
-# Unsupported target "build-script-build" with type "custom-build" omitted
-# Unsupported target "const_fn" with type "test" omitted
+# Unsupported target "rdrand" with type "bench" omitted
 
 rust_library(
-    name = "libc",
+    name = "rdrand",
     crate_type = "lib",
     deps = [
+        "@cargo_workspace__rand_core__0_3_1//:rand_core",
     ],
     srcs = glob(["**/*.rs"]),
     crate_root = "src/lib.rs",
@@ -37,7 +37,7 @@ rust_library(
     rustc_flags = [
         "--cap-lints=allow",
     ],
-    version = "0.2.74",
+    version = "0.4.0",
     tags = ["cargo-raze"],
     crate_features = [
         "default",
@@ -45,3 +45,5 @@ rust_library(
     ],
 )
 
+# Unsupported target "rdseed" with type "bench" omitted
+# Unsupported target "std" with type "bench" omitted
