--- a/examples/remote/cargo_workspace/remote/cloudabi-0.0.3.BUILD.bazel
+++ b/examples/remote/cargo_workspace/remote/cloudabi-0.0.3.BUILD.bazel
@@ -12,7 +12,7 @@ package(default_visibility = [
 ])
 
 licenses([
-  "notice", # MIT from expression "MIT OR Apache-2.0"
+  "restricted", # BSD-2-Clause from expression "BSD-2-Clause"
 ])
 
 load(
@@ -23,25 +23,24 @@ load(
 )
 
 
-# Unsupported target "build-script-build" with type "custom-build" omitted
-# Unsupported target "const_fn" with type "test" omitted
 
 rust_library(
-    name = "libc",
+    name = "cloudabi",
     crate_type = "lib",
     deps = [
+        "@cargo_workspace__bitflags__1_2_1//:bitflags",
     ],
     srcs = glob(["**/*.rs"]),
-    crate_root = "src/lib.rs",
+    crate_root = "cloudabi.rs",
     edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
     ],
-    version = "0.2.74",
+    version = "0.0.3",
     tags = ["cargo-raze"],
     crate_features = [
+        "bitflags",
         "default",
-        "std",
     ],
 )
 
