--- a/examples/remote/cargo_workspace/remote/rand_core-0.4.2.BUILD.bazel
+++ b/examples/remote/cargo_workspace/remote/rand_core-0.4.2.BUILD.bazel
@@ -23,11 +23,9 @@ load(
 )
 
 
-# Unsupported target "build-script-build" with type "custom-build" omitted
-# Unsupported target "const_fn" with type "test" omitted
 
 rust_library(
-    name = "libc",
+    name = "rand_core",
     crate_type = "lib",
     deps = [
     ],
@@ -37,10 +35,10 @@ rust_library(
     rustc_flags = [
         "--cap-lints=allow",
     ],
-    version = "0.2.74",
+    version = "0.4.2",
     tags = ["cargo-raze"],
     crate_features = [
-        "default",
+        "alloc",
         "std",
     ],
 )
