--- a/examples/remote/cargo_workspace/remote/rand_pcg-0.1.2.BUILD.bazel
+++ b/examples/remote/cargo_workspace/remote/rand_pcg-0.1.2.BUILD.bazel
@@ -24,12 +24,14 @@ load(
 
 
 # Unsupported target "build-script-build" with type "custom-build" omitted
-# Unsupported target "const_fn" with type "test" omitted
+# Unsupported target "lcg64xsh32" with type "test" omitted
+# Unsupported target "mcg128xsl64" with type "test" omitted
 
 rust_library(
-    name = "libc",
+    name = "rand_pcg",
     crate_type = "lib",
     deps = [
+        "@cargo_workspace__rand_core__0_4_2//:rand_core",
     ],
     srcs = glob(["**/*.rs"]),
     crate_root = "src/lib.rs",
@@ -37,11 +39,9 @@ rust_library(
     rustc_flags = [
         "--cap-lints=allow",
     ],
-    version = "0.2.74",
+    version = "0.1.2",
     tags = ["cargo-raze"],
     crate_features = [
-        "default",
-        "std",
     ],
 )
 
