--- a/examples/remote/cargo_workspace/remote/winapi-x86_64-pc-windows-gnu-0.4.0.BUILD.bazel
+++ b/examples/remote/cargo_workspace/remote/winapi-x86_64-pc-windows-gnu-0.4.0.BUILD.bazel
@@ -24,10 +24,9 @@ load(
 
 
 # Unsupported target "build-script-build" with type "custom-build" omitted
-# Unsupported target "const_fn" with type "test" omitted
 
 rust_library(
-    name = "libc",
+    name = "winapi_x86_64_pc_windows_gnu",
     crate_type = "lib",
     deps = [
     ],
@@ -37,11 +36,9 @@ rust_library(
     rustc_flags = [
         "--cap-lints=allow",
     ],
-    version = "0.2.74",
+    version = "0.4.0",
     tags = ["cargo-raze"],
     crate_features = [
-        "default",
-        "std",
     ],
 )
 
