--- a/impl/src/templates/remote_crates.bzl.template
+++ b/impl/src/templates/remote_crates.bzl.template
@@ -22,7 +22,11 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
         name = "{{workspace.gen_workspace_prefix}}__{{crate.pkg_name | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
         remote = "{{crate.source_details.git_data.remote}}",
         commit = "{{crate.source_details.git_data.commit}}",
+        {%- if workspace.workspace_path == "//" %}
+        build_file = Label("//remote:{{crate.pkg_name}}-{{crate.pkg_version}}.{{workspace.output_buildfile_suffix}}"),
+        {%- else %}
         build_file = Label("{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.{{workspace.output_buildfile_suffix}}"),
+        {%- endif %}
         init_submodules = True,
         {%- include "templates/partials/remote_crates_patch.template" %}
     )
@@ -36,7 +40,11 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
         {% endif -%}
         strip_prefix = "{{crate.pkg_name}}-{{crate.pkg_version}}",
         {%- include "templates/partials/remote_crates_patch.template" %}
+        {%- if workspace.workspace_path == "//" %}
+        build_file = Label("//remote:{{crate.pkg_name}}-{{crate.pkg_version}}.{{workspace.output_buildfile_suffix}}"),
+        {%- else %}
         build_file = Label("{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.{{workspace.output_buildfile_suffix}}"),
+        {%- endif %}
     )
     {%- endif %}
 {% endfor %}
