--- a/smoke_test/remote/complicated_cargo_library/BUILD
+++ b/smoke_test/remote/complicated_cargo_library/BUILD
@@ -4,8 +4,8 @@ rust_binary(
     name = "complicated_cargo_library",
     srcs = ["src/main.rs"],
     deps = [
-        "//remote/complicated_cargo_library/cargo:libloading",
-        "//remote/complicated_cargo_library/cargo:regex",
-        "//remote/complicated_cargo_library/cargo:specs",
+        "//remote/complicated_cargo_library/cargo:libloading__0_5_2",
+        "//remote/complicated_cargo_library/cargo:regex__0_2_5",
+        "//remote/complicated_cargo_library/cargo:specs__0_10_0",
     ],
 )
