--- a/smoke_test/remote/non_cratesio/BUILD
+++ b/smoke_test/remote/non_cratesio/BUILD
@@ -4,8 +4,8 @@ rust_binary(
     name = "non_cratesio_remote",
     srcs = ["src/main.rs"],
     deps = [
-        "//remote/non_cratesio/cargo:env_logger",
-        "//remote/non_cratesio/cargo:log",
-        "//remote/non_cratesio/cargo:rand"
+        "//remote/non_cratesio/cargo:env_logger__0_5_5",
+        "//remote/non_cratesio/cargo:log__0_4_0",
+        "//remote/non_cratesio/cargo:rand__0_4_1",
     ],
 )
