--- a/smoke_test/vendored/complicated_cargo_library/BUILD
+++ b/smoke_test/vendored/complicated_cargo_library/BUILD
@@ -4,7 +4,7 @@ rust_binary(
     name = "complicated_cargo_library",
     srcs = ["src/main.rs"],
     deps = [
-        "//vendored/complicated_cargo_library/cargo:regex",
-        "//vendored/complicated_cargo_library/cargo:specs",
+        "//vendored/complicated_cargo_library/cargo:regex__0_2_11",
+        "//vendored/complicated_cargo_library/cargo:specs__0_10_0",
     ],
 )
