--- a/smoke_test/vendored/hello_cargo_library/BUILD
+++ b/smoke_test/vendored/hello_cargo_library/BUILD
@@ -4,7 +4,7 @@ rust_binary(
     name = "hello_cargo_library",
     srcs = ["src/main.rs"],
     deps = [
-        "//vendored/hello_cargo_library/cargo:fern",
-        "//vendored/hello_cargo_library/cargo:log",
+        "//vendored/hello_cargo_library/cargo:fern__0_3_5",
+        "//vendored/hello_cargo_library/cargo:log__0_3_9",
     ],
 )
