--- a/smoke_test/vendored/non_cratesio_library/BUILD
+++ b/smoke_test/vendored/non_cratesio_library/BUILD
@@ -4,8 +4,8 @@ rust_binary(
     name = "non_cratesio_library",
     srcs = ["src/main.rs"],
     deps = [
-        "//vendored/non_cratesio_library/cargo:futures",
-        "//vendored/non_cratesio_library/cargo:env_logger",
-        "//vendored/non_cratesio_library/cargo:log"
+        "//vendored/non_cratesio_library/cargo:futures__0_2_0",
+        "//vendored/non_cratesio_library/cargo:env_logger__0_5_5",
+        "//vendored/non_cratesio_library/cargo:log__0_4_0"
     ],
 )
