--- a/smoke_test/remote/regression_test/cargo/Cargo.toml
+++ b/smoke_test/remote/regression_test/cargo/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "compile_with_bazel"
+name = "regression_test"
 version = "0.1.0"
 
 [lib]
@@ -14,9 +14,9 @@ specs = "=0.10.0"
 security-framework-sys = "0.2.2"
 
 [raze]
-workspace_path = "//remote/complicated_cargo_library/cargo"
+workspace_path = "//remote/regression_test/cargo"
 target = "x86_64-unknown-linux-gnu"
-gen_workspace_prefix = "complicated_cargo_library"
+gen_workspace_prefix = "regression_test"
 genmode = "Remote"
 output_buildfile_suffix = "BUILD.bazel"
 
