--- a/smoke_test/vendored/complicated_cargo_library/Cargo.toml
+++ b/smoke_test/vendored/complicated_cargo_library/Cargo.toml
@@ -8,12 +8,14 @@ regex = "0.2.5"
 security-framework-sys = "0.2.2"
 specs = "0.10.0"
 
-[lib]
-path = "fake_lib.rs"
+[[bin]]
+name = "complicated_cargo_library"
+path = "src/main.rs"
 
 [raze]
 workspace_path = "//vendored/complicated_cargo_library/cargo"
 target = "x86_64-unknown-linux-gnu"
+incompatible_relative_workspace_path = true
 
 [raze.crates.proc-macro2.'0.4.28']
 additional_flags = [
