--- a/smoke_test/vendored/non_cratesio_library/Cargo.toml
+++ b/smoke_test/vendored/non_cratesio_library/Cargo.toml
@@ -4,18 +4,19 @@ version = "0.1.0"
 authors = ["Bradlee Speice <bradlee.speice@gmail.com>"]
 
 [dependencies]
-rand = { git = "https://github.com/rust-random/rand.git", tag = "0.4.1" }
+
+futures = { git = "https://github.com/rust-lang-nursery/futures-rs.git", tag = "0.2.0" }
 env_logger = { git = "https://github.com/sebasmagri/env_logger.git", tag = "v0.5.5" }
 # Note that we use a (slightly) outdated version of log; because env_logger resolves a version
 # of `log` from crates.io that may clash with the resolution here, we need to force
 # a specific version that's different from what `env_logger` depends on.
 log = { git = "https://github.com/rust-lang-nursery/log.git", rev = "bf40d1f563c" }
 
-[lib]
-path = "fake_lib.rs"
+[[bin]]
+name = "non_cratesio_library"
+path = "src/main.rs"
 
 [raze]
-workspace_path = "//remote/non_cratesio/cargo"
+workspace_path = "//vendored/non_cratesio_library/cargo"
 target = "x86_64-unknown-linux-gnu"
-genmode = "Remote"
-gen_workspace_prefix = "non_cratesio"
+incompatible_relative_workspace_path = true
