test: check that /examples has no changes (#199)
Fixes #198

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,3 +40,5 @@ script:
   - cargo install --debug -f --path .
   - cd ../
   - ./smoke-test.sh
+  # Check that /examples has no changes
+  - if [ -n "$(git status --porcelain)" ] ; then echo '/examples is out of date. Please run `./smoke-test.sh` locally and commit the changes' >&2 ; exit 1 ; fi
