--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -1,11 +1,13 @@
-{%- if target_name_sanitized != crate_name_sanitized %}
-alias(
-  name = "{{ crate_name_sanitized }}",
-  actual = ":{{ target_name_sanitized }}",
-  tags = ["cargo-raze"],
-)
-{%- endif %}
 
+{% if target_name_sanitized != crate_name_sanitized -%}
+alias(
+    name = "{{ crate_name_sanitized }}",
+    actual = ":{{ target_name_sanitized }}",
+    tags = ["cargo-raze"],
+)
+
+{% endif -%}
+# buildifier: leave-alone
 rust_library(
     name = "{{ target_name_sanitized }}",
     crate_type = "{{ target.kind }}",
