--- a/impl/src/templates/crate.BUILD.template
+++ b/impl/src/templates/crate.BUILD.template
@@ -4,41 +4,44 @@ cargo-raze crate build file.
 
 DO NOT EDIT! Replaced on runs of cargo-raze
 """
-package(default_visibility = [
-  # Public for visibility by "@raze__crate__version//" targets.
-  #
-  # Prefer access through "{{workspace.workspace_path}}", which limits external
-  # visibility to explicit Cargo.toml dependencies.
-  "//visibility:public",
-])
 
-licenses([
-  "{{crate.license.rating}}", # {{crate.license.name}}
-])
-
+# buildifier: disable=load
 load(
     "@io_bazel_rules_rust//rust:rust.bzl",
-    "rust_library",
     "rust_binary",
+    "rust_library",
     "rust_test",
 )
 
-{% set crate_name_sanitized = crate.pkg_name | replace(from="-", to="_") %}
+package(default_visibility = [
+    # Public for visibility by "@raze__crate__version//" targets.
+    #
+    # Prefer access through "{{workspace.workspace_path}}", which limits external
+    # visibility to explicit Cargo.toml dependencies.
+    "//visibility:public",
+])
+
+licenses([
+    "{{crate.license.rating}}",  # {{crate.license.name}}
+])
+
+# Generated targets
+{%- set crate_name_sanitized = crate.pkg_name | replace(from="-", to="_") %}
 {%- if crate.build_script_target %}
-{%- include "templates/partials/build_script.template" %}
+{%    include "templates/partials/build_script.template" %}
 {%- endif %}
 {%- for target in crate.targets %}
 {%- set target_name_sanitized = target.name | replace(from="-", to="_") %}
 {%- if target.kind == "lib" %}
-{%- include "templates/partials/rust_library.template" %}
+{%  include "templates/partials/rust_library.template" %}
 {%- elif target.kind == "bin" %}
-{%- include "templates/partials/rust_binary.template" %}
+{%  include "templates/partials/rust_binary.template" %}
 {%- elif target.kind == "proc-macro" %}
-{%- include "templates/partials/rust_library.template" %}
+{%  include "templates/partials/rust_library.template" %}
 {%- elif target.kind == "dylib" %}
-{%- include "templates/partials/rust_library.template" %}
+{%  include "templates/partials/rust_library.template" %}
 {%- elif target.kind == "rlib" %}
-{%- include "templates/partials/rust_library.template" %}
+{%  include "templates/partials/rust_library.template" %}
 {%- else %}
 # Unsupported target "{{ target.name }}" with type "{{ target.kind }}" omitted
 {%- endif %}
