--- a/impl/src/templates/workspace.BUILD.template
+++ b/impl/src/templates/workspace.BUILD.template
@@ -4,12 +4,14 @@ cargo-raze workspace build file.
 
 DO NOT EDIT! Replaced on runs of cargo-raze
 """
+
 package(default_visibility = ["//visibility:public"])
 
 licenses([
-  "notice" # See individual crates for specific licenses
+    "notice",  # See individual crates for specific licenses
 ])
 
+# Aliased targets
 {%- for crate in crates %}
 {%- if crate.is_root_dependency and crate.lib_target_name %}
 {%- set crate_name_sanitized = crate.pkg_name | replace(from="-", to="_") %}
@@ -18,7 +20,7 @@ alias(
     actual = "{{crate.workspace_path_to_crate}}:{{crate_name_sanitized}}",
     tags = ["cargo-raze"],
 )
-{%- endif %}
+{%  endif %}
 {%- for aliased_target in crate.raze_settings.extra_aliased_targets %}
 alias(
     # Extra aliased target, from raze configuration
@@ -27,5 +29,5 @@ alias(
     actual = "{{crate.workspace_path_to_crate}}:{{aliased_target}}",
     tags = ["cargo-raze"],
 )
-{%- endfor %}
+{%  endfor %}
 {%- endfor %}
