Added Buildifier step to CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ before_install:
   - chmod +x install.sh
   - ./install.sh --user
   - rm -f install.sh
+  - wget -O ./buildifier https://github.com/bazelbuild/buildtools/releases/download/3.4.0/buildifier
+  - chmod +x ./buildifier
 
 before_script:
   - cargo install cargo-vendor --debug
@@ -40,5 +42,18 @@ script:
   - cargo install --debug -f --path .
   - cd ../
   - ./smoke-test.sh
+  # Run Buildifier as a linter step for /examples
+  - |
+    LINT="$(./buildifier -lint=warn -mode=check -r examples 2>&1)"
+    if [ -n "${LINT}" ]; then
+      echo 'Buildifier linting failed for `./examples`.' >&2 
+      echo "${LINT}"
+      exit 1
+    fi
+    rm -f ./buildifier
   # Check that /examples has no changes
-  - if [ -n "$(git status --porcelain)" ] ; then echo '/examples is out of date. Please run `./smoke-test.sh` locally and commit the changes' >&2 ; exit 1 ; fi
+  - |
+    if [ -n "$(git status --porcelain)" ]; then 
+      echo '/examples is out of date. Please run `./smoke-test.sh` locally and commit the changes' >&2
+      exit 1
+    fi
