Add manual tag to all generated targets

--- a/impl/src/templates/partials/build_script.template
+++ b/impl/src/templates/partials/build_script.template
@@ -41,7 +41,10 @@ cargo_build_script(
         {%- endfor %}
     },
     data = glob(["**"]),
-    tags = ["cargo-raze"],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
     version = "{{ crate.pkg_version }}",
     visibility = ["//visibility:private"],
 )
