--- a/impl/src/templates/workspace.BUILD.template
+++ b/impl/src/templates/workspace.BUILD.template
@@ -18,7 +18,10 @@ licenses([
 alias(
     name = "{{crate_name_sanitized}}",
     actual = "{{crate.workspace_path_to_crate}}:{{crate_name_sanitized}}",
-    tags = ["cargo-raze"],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
 )
 {%  endif %}
 {%- for aliased_target in crate.raze_settings.extra_aliased_targets %}
@@ -27,7 +30,10 @@ alias(
     # N.B.: The exact form of this is subject to change.
     name = "{{aliased_target}}",
     actual = "{{crate.workspace_path_to_crate}}:{{aliased_target}}",
-    tags = ["cargo-raze"],
+    tags = [
+        "cargo-raze",
+        "manual",
+    ],
 )
 {%  endfor %}
 {%- endfor %}
