Added multi target support

--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -23,21 +23,22 @@ path = "src/bin/cargo-raze.rs"
 
 [dependencies]
 anyhow = "1.0.30"
-docopt = "1.0.2"
-cargo-lock = "4.0.1"
-cargo-platform = "0.1.0"
 cargo_metadata = "0.9.1"
+cargo-lock = "4.0.1"
+cargo-platform = "0.1.1"
+cfg-expr = "0.4.1"
+docopt = "1.0.2"
 itertools = "0.8.0"
-slug = "0.1.4"
-tera = "1.0.0"
 semver = "0.9.0"
-serde_derive = "1.0.84"
 serde = "1.0.84"
-toml = "0.4.10"
+serde_derive = "1.0.84"
 serde_json = "1.0.34"
-tempfile = "3.1.0"
+slug = "0.1.4"
 spdx = "0.3.4"
+tempfile = "3.1.0"
+tera = "1.5.0"
+toml = "0.4.10"
 
 [dev-dependencies]
-lazy_static = "1.2.0"
 hamcrest2 = "0.3.0"
+lazy_static = "1.2.0"
