--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -18,12 +18,16 @@ rust_library(
         {%- if crate.build_script_target %}
         ":{{ crate_name_sanitized }}_build_script",
         {%- endif %}
-        {%- for dependency in crate.dependencies %}
+        {%- for dependency in crate.default_deps.dependencies %}
         "{{dependency.buildable_target}}",
         {%- endfor %}
         {%- for dependency in crate.raze_settings.additional_deps %}
         "{{dependency}}",
         {%- endfor %}
-    ],
+    ]
+    {%- if crate.targeted_deps %} 
+    {%- include "templates/partials/targeted_dependencies.template" -%},
+    {%- else -%},
+    {%- endif %}
 {% include "templates/partials/common_attrs.template" %}
 )
