--- a/smoke_test/remote/no_deps/BUILD
+++ b/smoke_test/remote/no_deps/BUILD
@@ -1,5 +1,7 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
 
+package(default_visibility = ["//visibility:public"])
+
 rust_binary(
     name = "no_deps",
     srcs = ["src/main.rs"],
