--- a/impl/src/templates/remote_crates.bzl.template
+++ b/impl/src/templates/remote_crates.bzl.template
@@ -12,8 +12,8 @@ load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")  # buildifier: di
 def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
 {%- if crates %}
     """This function defines a collection of repos and should be called in a WORKSPACE file"""
-{%-   for crate in crates %}
-    {%-   if crate.source_details.git_data %}
+{%- for crate in crates %}
+{%- if crate.source_details.git_data %}
     maybe(
         new_git_repository,
         name = "{{workspace.gen_workspace_prefix}}__{{crate.pkg_name | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
@@ -23,22 +23,22 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
         init_submodules = True,
         {%- include "templates/partials/remote_crates_patch.template" %}
     )
-    {%-   else %}
+{%- else %}
     maybe(
         http_archive,
         name = "{{workspace.gen_workspace_prefix}}__{{crate.pkg_name | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
         url = "https://crates-io.s3-us-west-1.amazonaws.com/crates/{{crate.pkg_name}}/{{crate.pkg_name}}-{{crate.pkg_version}}.crate",
         type = "tar.gz",
-        {%  if crate.sha256 -%}
+{%- if crate.sha256 %}
         sha256 = "{{crate.sha256}}",
-        {%  endif -%}
+{%- endif %}
         strip_prefix = "{{crate.pkg_name}}-{{crate.pkg_version}}",
         {%- include "templates/partials/remote_crates_patch.template" %}
         build_file = Label("{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.{{workspace.output_buildfile_suffix}}"),
     )
-    {%-   endif %}
-{%    endfor %}
+{%- endif %}
+{%  endfor %}
 {%- else %}
     """No crates were detected in the source Cargo.toml. This is a no-op"""
     pass
-{%- endif -%}
+{%  endif -%}
