--- a/smoke_test/remote/complicated_cargo_library/BUILD
+++ b/smoke_test/remote/complicated_cargo_library/BUILD
@@ -1,5 +1,7 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
 
+package(default_visibility = ["//visibility:public"])
+
 rust_binary(
     name = "complicated_cargo_library",
     srcs = ["src/main.rs"],
