Updated .lock files for existing examples

--- a/smoke_test/remote/complicated_cargo_library/Cargo.toml
+++ b/smoke_test/remote/complicated_cargo_library/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/main.rs"
 libloading = "=0.5.2"
 regex = "=0.2.5"
 specs = "=0.10.0"
-security-framework-sys = "0.2.2"
+security-framework-sys = "=0.2.2"
 
 [raze]
 workspace_path = "//remote/complicated_cargo_library/cargo"
@@ -20,16 +20,19 @@ gen_workspace_prefix = "remote_complicated_cargo_library"
 genmode = "Remote"
 incompatible_relative_workspace_path = true
 
-[raze.crates.proc-macro2.'0.4.28']
+[raze.crates.proc-macro2.'0.4.30']
 additional_flags = [
     "--cfg=use_proc_macro",
 ]
+
+[raze.crates.syn.'0.15.44']
+gen_buildrs = true
 
 [raze.crates.libloading.'0.5.2']
 additional_deps = [":global_static"]
 additional_build_file = "cargo/libloading_global_static.BUILD"
 
-[raze.crates.regex.'0.2.5']
+[raze.crates.regex.'0.2.11']
 skipped_deps = [
   # This will break the regex crate
   #"regex-syntax-0.4.2"
@@ -45,5 +48,3 @@ additional_flags = [
 # Add an unused environment variable
 additional_env = { NOT_USED_KEY = "not_used_value" }
 
-[raze.crates.clang-sys.'0.21.1']
-gen_buildrs = true
