--- a/smoke_test/vendored/complicated_cargo_library/Cargo.toml
+++ b/smoke_test/vendored/complicated_cargo_library/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "compile_with_bazel"
+name = "complicated_cargo_library"
 version = "0.1.0"
 
 [dependencies]
@@ -17,7 +17,7 @@ workspace_path = "//vendored/complicated_cargo_library/cargo"
 incompatible_relative_workspace_path = true
 gen_workspace_prefix = "vendored_complicated_cargo_library"
 
-[raze.crates.proc-macro2.'0.4.28']
+[raze.crates.proc-macro2.'0.4.30']
 additional_flags = [
     "--cfg=use_proc_macro",
 ]
@@ -33,9 +33,6 @@ additional_flags = [
 ]
 # Add an unused environment variable
 additional_env = { NOT_USED_KEY = "not_used_value" }
-
-[raze.crates.clang-sys.'0.21.1']
-gen_buildrs = true
 
 [raze.crates.conduit-mime-types.'0.7.3']
 data_attr = "glob([\"data/**\"])"
