Allow matching triples directly
Before this change, the get_matching_bazel_triples would only allow matching cfg(...) targets. It seems that the intended behaviour was to allow passing triples (such as `x86_64-unknown-linux-gnu`) directly, as per the `format!("cfg(target = \"{}\")", target)` replacement at the beginning of the function. Unfortunately, the match was missing the right case below (`Predicate::Target(tp)` only matches builtin `target_{arch,os,...}`).

This makes this function more consistent with `is_bazel_supported_platform` above, and it seems to solve a bug where target specific dependencies specified with triples (such as is the case for the `winapi` crate in one of the `complicated_cargo_library` example) would be ignored.

--- a/examples/remote/complicated_cargo_library/cargo/remote/winapi-0.3.9.BUILD.bazel
+++ b/examples/remote/complicated_cargo_library/cargo/remote/winapi-0.3.9.BUILD.bazel
@@ -36,7 +36,23 @@ rust_library(
     name = "winapi",
     crate_type = "lib",
     deps = [
-    ],
+    ] + selects.with_or({
+        # i686-pc-windows-gnu
+        (
+            "@io_bazel_rules_rust//rust/platform:i686-pc-windows-gnu",
+        ): [
+            "@remote_complicated_cargo_library__winapi_i686_pc_windows_gnu__0_4_0//:winapi_i686_pc_windows_gnu",
+        ],
+        "//conditions:default": [],
+    }) + selects.with_or({
+        # x86_64-pc-windows-gnu
+        (
+            "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-gnu",
+        ): [
+            "@remote_complicated_cargo_library__winapi_x86_64_pc_windows_gnu__0_4_0//:winapi_x86_64_pc_windows_gnu",
+        ],
+        "//conditions:default": [],
+    }),
     srcs = glob(["**/*.rs"]),
     crate_root = "src/lib.rs",
     edition = "2015",
