--- a/impl/src/templates/remote_crates.bzl.template
+++ b/impl/src/templates/remote_crates.bzl.template
@@ -31,6 +31,8 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
         type = "tar.gz",
 {%- if crate.sha256 %}
         sha256 = "{{crate.sha256}}",
+{%- else %}
+        # sha256 = TODO
 {%- endif %}
         strip_prefix = "{{crate.pkg_name}}-{{crate.pkg_version}}",
         {%- include "templates/partials/remote_crates_patch.template" %}
