update examples via smoke_test
The length check in common_attrs is only checking if there are any
targeted deps, so targeted deps without any aliases end up with an
empty aliases entry instead of it being excluded completely. What we
really want to do if check if deps.aliased_dependencies is non-empty
for any of the provided targeted deps, but I'm not sure how/if that
can be done in Tera.

--- a/examples/remote/complicated_cargo_library/cargo/remote/libloading-0.5.2.BUILD.bazel
+++ b/examples/remote/complicated_cargo_library/cargo/remote/libloading-0.5.2.BUILD.bazel
@@ -61,6 +61,8 @@ rust_library(
     ],
     crate_features = [
     ],
+    aliases = {
+    },
 )
 # Unsupported target "markers" with type "test" omitted
 # Unsupported target "windows" with type "test" omitted
