--- a/examples/remote/binary_dependencies/cargo/remote/atty-0.2.14.BUILD.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/atty-0.2.14.BUILD.bazel
@@ -61,8 +61,8 @@ rust_library(
     }) + selects.with_or({
         # cfg(windows)
         (
-            "@io_bazel_rules_rust//rust/platform:i686-pc-windows-gnu",
-            "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-gnu",
+            "@io_bazel_rules_rust//rust/platform:i686-pc-windows-msvc",
+            "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-msvc",
         ): [
             "@remote_binary_dependencies__winapi__0_3_8//:winapi",
         ],
