--- a/examples/remote/binary_dependencies/cargo/remote/backtrace-0.3.50.BUILD.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/backtrace-0.3.50.BUILD.bazel
@@ -46,8 +46,8 @@ rust_library(
     ] + selects.with_or({
         # cfg(windows)
         (
-            "@io_bazel_rules_rust//rust/platform:i686-pc-windows-gnu",
-            "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-gnu",
+            "@io_bazel_rules_rust//rust/platform:i686-pc-windows-msvc",
+            "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-msvc",
         ): [
         ],
         "//conditions:default": [],
