--- a/examples/remote/complicated_cargo_library/cargo/remote/time-0.1.44.BUILD.bazel
+++ b/examples/remote/complicated_cargo_library/cargo/remote/time-0.1.44.BUILD.bazel
@@ -39,8 +39,8 @@ rust_library(
     ] + selects.with_or({
         # cfg(windows)
         (
-            "@io_bazel_rules_rust//rust/platform:i686-pc-windows-gnu",
-            "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-gnu",
+            "@io_bazel_rules_rust//rust/platform:i686-pc-windows-msvc",
+            "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-msvc",
         ): [
             "@remote_complicated_cargo_library__winapi__0_3_9//:winapi",
         ],
