Addressed buildifier defects

--- a/impl/src/rendering/templates/crate.BUILD.template
+++ b/impl/src/rendering/templates/crate.BUILD.template
@@ -28,24 +28,21 @@ licenses([
     "{{crate.license.rating}}",  # {{crate.license.name}}
 ])
 
-# Generated targets
-{%- set crate_name_sanitized = crate.pkg_name | replace(from="-", to="_") %}
-{%- if crate.build_script_target %}
+# Generated Targets
+{%- set crate_name_sanitized = crate.pkg_name | replace(from="-", to="_") -%}
+{%- if crate.build_script_target -%}
 {%      include "templates/partials/build_script.template" %}
-{%- endif %}
-{%- for target in crate.targets %}
+{%- endif -%}
+{%- for target in crate.targets -%}
 {%-     set target_name_sanitized = target.name | replace(from="-", to="_") %}
-{%-     if target.kind == "lib" %}
-{%          include "templates/partials/rust_library.template" %}
-{%-     elif target.kind == "bin" %}
+{%-     if target.kind == "bin" %}
+
 {%          include "templates/partials/rust_binary.template" %}
-{%-     elif target.kind == "proc-macro" %}
-{%          include "templates/partials/rust_library.template" %}
-{%-     elif target.kind == "dylib" %}
-{%          include "templates/partials/rust_library.template" %}
-{%-     elif target.kind == "rlib" %}
+{%-     elif target.kind == "dylib" or target.kind == "lib" or target.kind == "proc-macro" or target.kind == "rlib" %}
+
 {%          include "templates/partials/rust_library.template" %}
 {%-     else %}
+
 # Unsupported target "{{ target.name }}" with type "{{ target.kind }}" omitted
 {%-     endif %}
 {%- endfor %}
