--- a/impl/src/rendering/templates/partials/common_attrs.template
+++ b/impl/src/rendering/templates/partials/common_attrs.template
@@ -1,5 +1,28 @@
     srcs = glob(["**/*.rs"]),
+    {%- if crate.default_deps.aliased_dependencies | length != 0 or crate.targeted_deps | length != 0 %}
+    aliases = {
+        {%- for alias in crate.default_deps.aliased_dependencies %}
+        "{{alias.target}}": "{{alias.alias}}",
+        {%- endfor %}
+        {%- for dep in crate.targeted_deps %}
+        {%- for alias in dep.deps.aliased_dependencies %}
+        "{{alias.target}}": "{{alias.alias}}",
+        {%- endfor %}
+        {%- endfor %}
+    },
+    {%- endif %}
+    crate_features = [
+        {%- for feature in crate.features %}
+        "{{feature}}",
+        {%- endfor %}
+    ],
     crate_root = "{{ target.path }}",
+    {%- if target.kind != "bin" %}
+    crate_type = "{{ target.kind }}",
+    {%- endif %}
+    {%- if crate.raze_settings.data_attr %}
+    data = {{crate.raze_settings.data_attr}},
+    {%- endif %}
     edition = "{{ target.edition }}",
     {%- if crate.default_deps.proc_macro_dependencies %}
     proc_macro_deps = [
@@ -21,28 +44,8 @@
         {%- endfor %}
     },
     {%- endif %}
-    {%- if crate.raze_settings.data_attr %}
-    data = {{crate.raze_settings.data_attr}},
-    {%- endif %}
-    version = "{{ crate.pkg_version }}",
     tags = [
         "cargo-raze",
         "manual",
     ],
-    crate_features = [
-        {%- for feature in crate.features %}
-        "{{feature}}",
-        {%- endfor %}
-    ],
-    {%- if crate.default_deps.aliased_dependencies | length != 0 or crate.targeted_deps | length != 0 %}
-    aliases = {
-        {%- for alias in crate.default_deps.aliased_dependencies %}
-        "{{alias.target}}": "{{alias.alias}}",
-        {%- endfor %}
-        {%- for dep in crate.targeted_deps %}
-        {%- for alias in dep.deps.aliased_dependencies %}
-        "{{alias.target}}": "{{alias.alias}}",
-        {%- endfor %}
-        {%- endfor %}
-    },
-    {%- endif -%}
+    version = "{{ crate.pkg_version }}",
