--- a/examples/remote/complicated_cargo_library/cargo/remote/regex-0.2.5.BUILD.bazel
+++ b/examples/remote/complicated_cargo_library/cargo/remote/regex-0.2.5.BUILD.bazel
@@ -48,13 +48,18 @@ rust_library(
         "@remote_complicated_cargo_library__regex_syntax__0_4_2//:regex_syntax",
         "@remote_complicated_cargo_library__thread_local__0_3_6//:thread_local",
         "@remote_complicated_cargo_library__utf8_ranges__1_0_4//:utf8_ranges",
+        "@remote_complicated_cargo_library__specs__0_10_0//:specs",
     ],
     srcs = glob(["**/*.rs"]),
     crate_root = "src/lib.rs",
     edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
+        "--cfg=not_used",
     ],
+    rustc_env = {
+        "NOT_USED_KEY": "not_used_value",
+    },
     version = "0.2.5",
     tags = [
         "cargo-raze",
