--- a/impl/src/rendering/templates/partials/rust_binary.template
+++ b/impl/src/rendering/templates/partials/rust_binary.template
@@ -3,6 +3,7 @@ rust_binary(
     # N.B.: The exact form of this is subject to change.
     name = "cargo_bin_{{ target_name_sanitized }}",
 {% include "templates/partials/common_attrs.template" %}
+    # buildifier: leave-alone
     deps = [
         {%- if crate.lib_target_name %}
         # Binaries get an implicit dependency on their crate's lib
