--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -31,6 +31,7 @@ cargo-platform = "0.1.1"
 cfg-expr = "0.5.0"
 crates-index = "0.16.0"
 docopt = "1.1.0"
+glob = "0.3.0"
 itertools = "0.9.0"
 log = "0.4.11"
 rustc-serialize = "0.3.24"
