--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -35,7 +35,7 @@ glob = "0.3.0"
 itertools = "0.9.0"
 log = "0.4.11"
 rustc-serialize = "0.3.24"
-semver = "0.11.0"
+semver = { version = "0.11.0", features = ["serde"] }
 serde = "1.0.117"
 serde_derive = "1.0.117"
 slug = "0.1.4"
