--- a/smoke_test/tests/BUILD.bazel
+++ b/smoke_test/tests/BUILD.bazel
@@ -7,11 +7,15 @@ load("//tests:launch_test.bzl", "launch_test")
 
 launch_test(target = "//remote/binary_dependencies:binary_dependencies_bin")
 
+launch_test(target = "//remote/cargo_workspace/num_printer:number_printer")
+
 launch_test(target = "//remote/complicated_cargo_library")
 
 launch_test(target = "//remote/no_deps")
 
 launch_test(target = "//remote/non_cratesio:non_cratesio_remote")
+
+launch_test(target = "//vendored/cargo_workspace/num_printer:number_printer")
 
 launch_test(target = "//vendored/complicated_cargo_library")
 
