--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -34,6 +34,8 @@ docopt = "1.1.0"
 glob = "0.3.0"
 itertools = "0.9.0"
 log = "0.4.11"
+pathdiff = "0.2.0"
+regex = "1.4.2"
 rustc-serialize = "0.3.24"
 semver = { version = "0.11.0", features = ["serde"] }
 serde = "1.0.117"
