--- a/impl/src/rendering/templates/remote_crates.bzl.template
+++ b/impl/src/rendering/templates/remote_crates.bzl.template
@@ -1,10 +1,4 @@
-"""
-@generated
-cargo-raze crate workspace functions
-
-DO NOT EDIT! Replaced on runs of cargo-raze
-"""
-
+{%- include "templates/partials/header.template" %}
 load("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")  # buildifier: disable=load
 load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")  # buildifier: disable=load
 load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")  # buildifier: disable=load
