Fixed regression in template rendering

--- a/impl/src/rendering/templates/crate.BUILD.template
+++ b/impl/src/rendering/templates/crate.BUILD.template
@@ -30,7 +30,7 @@ licenses([
 
 # Generated Targets
 {%- set crate_name_sanitized = crate.pkg_name | replace(from="-", to="_") -%}
-{%- if crate.build_script_target -%}
+{%- if crate.build_script_target %}
 {%      include "templates/partials/build_script.template" %}
 {%- endif -%}
 {%- for target in crate.targets -%}
